<resources>
    <string name="app_name">Tatbeqakum</string>
    <string name="facebook_app_id" translatable="false">300288838058286</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb300288838058286</string>
    <string name="tatbeqakum_ar">تطبيقكم</string>
    <string name="tatbeqakum_en">tatbeqakum</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="you_dont_have_account">Do you have an account?</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="you_have_account">Have you registered before?</string>
    <string name="reset">Reset</string>
    <string name="thanks">Thanks!</string>
    <string name="enter_code">Enter the code</string>
    <string name="activiation_message">The activation code has been sent to the phone number,
Please check messages</string>
    <string name="code_confirm">Confirm the code</string>
    <string name="didnt_recieve">Didn\'t Recive the code?</string>
    <string name="send_again">Resend</string>
    <string name="all">All</string>
    <string name="digital_services">Digital services</string>
    <string name="free_delivery">Free delivery</string>
    <string name="my_orders">My orders</string>
    <string name="settings">Settings</string>
    <string name="about_app">About app</string>
    <string name="usage_policy">Usage Policy</string>
    <string name="order_details">Order details</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="payment_way">Payment methods</string>
    <string name="purchases">Purchases</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="added_tax">Added tax</string>
    <string name="total_amount">Total amount</string>
    <string name="complete_order">Complete the order</string>
    <string name="type_message">Write a message …</string>
    <string name="add_payment_card">Add a payment card</string>
    <string name="card_number">Card number</string>
    <string name="expired_date">Expired date</string>
    <string name="ok">OK</string>
    <string name="search_in_offer_service">Search offers and services</string>
    <string name="latest_offers_discounts">Latest offers and discounts</string>
    <string name="current_location">Current location</string>
    <string name="profile">My profile</string>
    <string name="main">Main</string>
    <string name="orders">Orders</string>
    <string name="chatting">Chatting</string>
    <string name="product_describe">Product description</string>
    <string name="add_the_discount_coupon">Add a discount coupon</string>
    <string name="send_the_order">Send the order</string>
    <string name="the_discount">Discount</string>
    <string name="discount">DISC</string>
    <string name="receive_place">Place of Receive</string>
    <string name="select_receive_place">Select place of delivery</string>
    <string name="delivary_place">Place of delivery</string>
    <string name="select_delivary_place">Select a delivery location</string>
    <string name="car_type">Car type</string>
    <string name="where_you_go">Where do you want to go?</string>
    <string name="write_where_you_go">Type where you want to go …</string>
    <string name="delivery_charging">Delivery fee</string>
    <string name="notice_pay">Note: Before sending the order, you must pay first</string>
    <string name="send_order">Send order</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="predict_period">Expected delivery time</string>
    <string name="ur_name">Your name</string>
    <string name="city">City</string>
    <string name="room">Room</string>
    <string name="male_female">Men / Women</string>
    <string name="wedding_date">Date of marriage</string>
    <string name="display">طريقة العرض</string>
    <string name="suggestions">Complaints and inquiries</string>
    <string name="questions">questions and answers</string>
    <string name="language">Application language</string>
    <string name="share">Share the app</string>
    <string name="contact_us">call us</string>
    <string name="help_current_order">أحتاج مساعدة في طلبي الحالي</string>
    <string name="help_how_order">كيف أطلب من تطبيقكم؟</string>
    <string name="show_way">show Way</string>
    <string name="help_order_received">أحتاج مساعدة في طلب تم إستلامه</string>
    <string name="question_trader">لدي إستفسار كصاحب متجر</string>
    <string name="how_work_with_our_app">كيف أعمل مع تطبيقكم؟</string>
    <string name="customer_num">عدد المباشرين</string>
    <string name="coffeer_num">عدد القهوجي</string>
    <string name="zamzam_num">عدد سقايا زمزم</string>
    <string name="delivery_num">Contact number</string>
    <string name="confirm_order">Confirm order</string>
    <string name="write_ur_notice">Write your requests and order notes</string>
    <string name="periorty">Priority</string>
    <string name="come_time">Time attendance</string>
    <string name="add_text">Add text</string>
    <string name="order_progress">Order progress</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="category">Categories</string>
    <string name="email_valid">Enter a valid email</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="reial">Riyal</string>
    <string name="empty">Empty!</string>
    <string name="something_went_error">Something went error</string>
    <string name="please_wait">Please wait</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="not_fount_product_in_cart">There are no products added to the cart</string>
    <string name="minimum_order">The minimum is one order</string>
    <string name="not_fount_free_delivery">There is no free delivery services</string>
    <string name="unknown">Unknown</string>
    <string name="empty_fav">Favorite is empty!</string>
    <string name="favorite">Favorite</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="selecat_location">We want to activate the site service to give you more accurate results </string>
    <string name="enter_place">Enter the Place!</string>
    <string name="select_type">Select type</string>
    <string name="select_car_type">Select car type!</string>
    <string name="network_error">Failed to connect, try again!</string>
    <string name="timeout_error">Connection timed out, try again!</string>
    <string name="enter_time_date">Enter the date and time!</string>
    <string name="invalid_time">Invalid time!</string>
    <string name="not_found_offers">There are no offers available now</string>
    <string name="high">High</string>
    <string name="middle">Middle</string>
    <string name="low">Low</string>
    <string name="select_date">Choose a date</string>
    <string name="invalid_date">Invalid date!</string>
    <string name="select_start_date_before">Choose a start date first!</string>
    <string name="choose_pic">Choose an image</string>
    <string name="take_photo">Take a picture</string>
    <string name="choose_gallery">Chose from the studio</string>
    <string name="not_found_remote_service">There is no digital services</string>
    <string name="copied_text">The code has been copied</string>
    <string name="notifications">Notifications</string>
    <string name="start_chat">Start chatting</string>
    <string name="show_details">View details</string>
    <string name="show_cards">View cards</string>
    <string name="mycards">My cards</string>
    <string name="enter_date">Enter the date</string>
    <string name="edit_card">Edit payment card</string>
    <string name="not_found_nearby">There are no places nearby</string>
    <string name="tatbeq_store">Tatbeqakum Store</string>
    <string name="rs">R.S</string>
    <string name="buy_num">The number of times purchased</string>
    <string name="stores_describe">Description of the store</string>
    <string name="store_name">Store name</string>
    <string name="choose_size">Choose a specific size!</string>
    <string name="choose_color">Choose a specific color!</string>
    <string name="not_found_coupons">There are no coupons added</string>
    <string name="enter_coupon">Enter the coupon</string>
    <string name="verify">Verify</string>
    <string name="err_coupon">The coupon you entered is wrong</string>
    <string name="add_coupon">Add coupon</string>
    <string name="add_coupon_success">Coupon added successfully</string>
    <string name="coupons">Coupons</string>
    <string name="delete_question">Are you sure to delete?</string>
    <string name="delete_question_cart">Do you want to delete this item from the cart?</string>
    <string name="delete_question_copoun">Do you want to delete this coupon?</string>
    <string name="not_found_products">There are no products</string>
    <string name="add">Add</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="add_amount_success">Amount successfully added</string>
    <string name="add_amount">Add amount</string>
    <string name="edit_profile">Edit the personal page</string>
    <string name="password_new">Current Password</string>
    <string name="edit_account">Edit account</string>
    <string name="name">Name</string>
    <string name="maybe_like_you">You may also like</string>
    <string name="valid_upto">Valid up to</string>
    <string name="add_image">Add image</string>
    <string name="add_files">Add files</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="saller_info">Seller data</string>
    <string name="chatting_now">Chatting now</string>
    <string name="customer_service">Customers service</string>
    <string name="how_help_you">How can we help you?</string>
    <string name="have_suggestion">I have a suggestion</string>
    <string name="common_question">Common questions</string>
    <string name="help">Help</string>
    <string name="add_new_payment_way">Add a new payment method</string>
    <string name="stc_pay">Stc Pay</string>
    <string name="contact_num">Contact number</string>
    <string name="extra_service">Additional services</string>
    <string name="promation">Advertising</string>
    <string name="our_works">Our Gallery</string>
    <string name="near_places">Nearby Places</string>
    <string name="request_service">Req a service</string>
    <string name="request_car">Request a car</string>
    <string name="hello">Welcome</string>
    <string name="account">Account</string>
    <string name="wallet">wallet</string>
    <string name="cards">Cards</string>
    <string name="orders_notifications">Orders notifications</string>
    <string name="store_notifications">New store notifications</string>
    <string name="offer_notifications">Notifications of new offers</string>
    <string name="favorite_places">Favorite places</string>
    <string name="request_price_offer">Request for Quotation</string>
    <string name="add_order">Add order</string>
    <string name="connect_bot">Connect with the bot</string>
    <string name="logout">Logout</string>
    <string name="join_to_tatbeq">اJoin to Tatbeqakum</string>
    <string name="latest_categories">Latest categories</string>
    <string name="all_categories">All categories</string>
    <string name="delivered">Delivered</string>
    <string name="order_num">Order number</string>
    <string name="arabic">عربي</string>
    <string name="english">english</string>
</resources>