<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navMain"
        android:enabled="true"
        android:icon="@drawable/logo_main"
        android:title="@string/main"
     />

    <item
        android:id="@+id/navRequests"
        android:enabled="true"
        android:icon="@drawable/ic_nav_check"
        android:title="@string/orders"
        />

    <item
        android:id="@+id/navCategory"
        android:enabled="true"
        android:icon="@drawable/ic_nav_window"
        android:title="@string/category"
        />

    <item
        android:id="@+id/navChat"
        android:enabled="true"
        android:icon="@drawable/ic_nav_message"
        android:title="@string/chatting"
        />


    <item
        android:id="@+id/navProfile"
        android:enabled="true"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/profile"
        />
</menu>