<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".auth.VerificationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_40sdp">

            <include layout="@layout/toolbar" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="@font/cairo_reqular"
                android:text="@string/thanks"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_30ssp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_thank_you" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_70sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/enter_code"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/tvCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGrey"
                    android:fontFamily="@font/cairo_reqular"

                    android:inputType="number"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/cairo_reqular"
                android:gravity="center"
                android:text="@string/activiation_message"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/_10ssp" />


            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/shape_light_green"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/code_confirm"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/didnt_recieve"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvResendCode"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|start"
                    android:layout_marginStart="5dp"
                    android:padding="@dimen/_5sdp"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/send_again"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>