<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".NewestOffersServicesActivity">


    <include layout="@layout/toolbar_location"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_margin="@dimen/_10sdp"
        app:contentPaddingLeft="@dimen/_10sdp"
        app:contentPaddingRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <EditText
            android:id="@+id/searchHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:drawableEnd="@drawable/ic_icon_search"
            android:fontFamily="@font/cairo_reqular"
            android:hint="@string/search_in_offer_service"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@color/colorGrey" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/latest_offers_discounts"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13ssp" />


    <TextView
        android:id="@+id/tvNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/cairo_reqular"
        android:text="@string/not_found_offers"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_20sdp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNewestOffers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_newest_offers" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>