<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".auth.ResetPasswordActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:paddingBottom="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/reset"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15ssp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/logo_main" />




            <LinearLayout
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="center_horizontal|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/email">
                </TextView>

                <EditText
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/colorGrey2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_reqular"

                    android:backgroundTint="@color/colorGrey"
                    android:hint="hzdawoud@gmail.com">
                </EditText>

            </LinearLayout>

            <Button
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/shape_light_green"
                android:backgroundTint="@color/colorPrimary"                  android:textColor="@color/colorWhite">
            </Button>

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_gravity="center_horizontal|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/you_dont_have_account">
                </TextView>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_horizontal|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/create_account">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>